THRIFT-3302 Go JSON protocol should encode Thrift byte type as signed integer string Client: Go Patch: Nobuaki Sukegawa <nsukeg@gmail.com>

This closes #591